--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/animations": "5.2.10",
+    "@angular/animations": "^6.0.9",
     "@angular/common": "5.2.10",
     "@angular/compiler": "5.2.10",
     "@angular/compiler-cli": "5.2.10",
@@ -37,6 +37,7 @@
     "cordova-plugin-x-socialsharing": "^5.4.1",
     "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "3.9.2",
+    "ionic-tooltips": "^2.0.1",
     "ionicons": "3.0.0",
     "rxjs": "5.5.10",
     "sw-toolbox": "3.6.0",
