--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
     "cordova-android": "^7.0.0",
+    "cordova-browser": "5.0.4",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "^5.4.1",
@@ -45,6 +47,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
+    "@ionic/lab": "1.0.8",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
@@ -55,10 +58,12 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
